--- a/nav-bar/src/app/app.component.html
+++ b/nav-bar/src/app/app.component.html
@@ -2,7 +2,7 @@
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="nav-title">
-        JoGeek
+       Thendo's  nav-bar
       </div>
     </div>
     <div class="nav-btn">
